# SlipInPlace

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  SlipInPlace.cpp  keywords.txt  library.example.properties  library.properties
examples/sip_encode/: sip_encode.ino
examples/sip_encode_oop/: sip_encode_oop.ino
src/: CMakeLists.txt  SlipInPlace.h  SlipUtils.h  slipinplace.h  sliputils.h
src/Polyfills/: type_traits.h
test/: CMakeLists.txt  hrslip.h  main.cpp  main_devel1.cpp  main_devel2.cpp  main_samples.cpp  test_decode.cpp  test_decode.cpp.bak  test_decode_ip.cpp  test_decode_null.cpp  test_decode_oop.cpp  test_decode_slip.cpp  test_encode.cpp  test_encode_ip.cpp  test_encode_null.cpp  test_encode_oop.cpp  test_encode_slip.cpp  test_sliputils.cpp
